--- a/index.html
+++ b/index.html
@@ -2,64 +2,77 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>BlackFalcon SOC™</title>
+<title>BlackFalcon SOC™ Ultimate</title>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
 body{
 margin:0;
 font-family:'Orbitron',sans-serif;
-background:linear-gradient(180deg,#001a14,#000);
-color:#00ffcc;
-transition:0.5s;
+color:#00f5d4;
+overflow-x:hidden;
 }
 
 body.alert{
-background:#3b0000 !important;
+background:#1a0000;
 }
 
 header{
 text-align:center;
 padding:40px 20px;
+position:relative;
+z-index:2;
+}
+
+.controls{
+text-align:center;
+margin-bottom:20px;
+z-index:2;
+position:relative;
+}
+
+button{
+padding:10px 25px;
+margin:5px;
+border-radius:30px;
+border:1px solid #00f5d4;
+background:rgba(0,0,0,0.6);
+color:#00f5d4;
+font-weight:bold;
+cursor:pointer;
+backdrop-filter:blur(6px);
 }
 
 textarea{
 width:85%;
 height:150px;
 display:block;
-margin:20px auto;
-background:#000;
-border:2px solid #00ffcc;
+margin:30px auto;
+background:rgba(0,0,0,0.5);
+border:1px solid #00f5d4;
 border-radius:20px;
 padding:20px;
-color:#00ffcc;
-font-size:16px;
+color:#00f5d4;
+font-size:15px;
+backdrop-filter:blur(8px);
+z-index:2;
+position:relative;
 }
-
-button{
-display:inline-block;
-margin:10px;
-padding:10px 25px;
-background:#00ffcc;
-border:none;
-border-radius:15px;
-font-weight:bold;
-cursor:pointer;
-}
-
-.center{text-align:center;}
 
 .card{
 width:85%;
 margin:20px auto;
-background:#050505;
-border-radius:20px;
+background:rgba(0,0,0,0.4);
+border-radius:25px;
 padding:25px;
-box-shadow:0 0 30px #00ffcc22;
+backdrop-filter:blur(12px);
+box-shadow:0 0 40px #00f5d422;
+z-index:2;
+position:relative;
 }
 
 .progress{
-height:10px;
+height:8px;
 background:#111;
 border-radius:10px;
 margin-top:15px;
@@ -69,48 +82,58 @@ overflow:hidden;
 .bar{
 height:100%;
 width:0%;
-background:#00ffcc;
+background:#00f5d4;
 transition:0.5s;
 }
 
 .bar.danger{
-background:#ff0000;
+background:#ff0033;
 }
 
 .recommendation{
 width:85%;
 margin:20px auto;
 padding:20px;
-border-radius:15px;
+border-radius:20px;
+background:rgba(0,0,0,0.4);
+border:1px solid #00f5d4;
+backdrop-filter:blur(10px);
+box-shadow:0 0 25px #00f5d422;
 font-weight:bold;
-background:#002b24;
-border:2px solid #00ffcc;
-box-shadow:0 0 20px #00ffcc33;
-transition:0.5s;
+position:relative;
+z-index:2;
 }
 
 .recommendation.danger{
-background:#330000;
-border:2px solid #ff0000;
-box-shadow:0 0 25px #ff000066;
-color:#ffb3b3;
+border:1px solid #ff0033;
+box-shadow:0 0 30px #ff003344;
+color:#ff9aa2;
+}
+
+canvas{
+position:fixed;
+top:0;
+left:0;
+z-index:0;
 }
 </style>
 </head>
 
 <body>
 
+<canvas id="matrix"></canvas>
+
 <header>
-<h1 id="title" class="speakable">🦅 BlackFalcon SOC</h1>
+<h1 class="speakable">🦅 BlackFalcon SOC</h1>
 <p id="subtitle" class="speakable">Advanced Security Operations Platform</p>
 </header>
 
-<div class="center">
-<button onclick="toggleLang()" class="speakable">🌍 Change Language</button>
+<div class="controls">
+<button onclick="toggleLang()" class="speakable">🌍 Language</button>
 <button onclick="window.print()" class="speakable">Export Report</button>
 </div>
 
-<textarea id="msg" placeholder="Paste suspicious message here..." class="speakable"></textarea>
+<textarea id="msg" class="speakable" placeholder="Paste suspicious message here..."></textarea>
 
 <div class="card">
 <h3 id="threatTitle" class="speakable">Threat Status</h3>
@@ -118,7 +141,7 @@ color:#ffb3b3;
 <p class="speakable"><span id="riskLabel">Risk Score</span>: <span id="score">0</span>%</p>
 <div class="progress"><div class="bar" id="bar"></div></div>
 <p class="speakable">MITRE: <span id="mitre">—</span></p>
-<p class="speakable"><span id="incidentLabel">Incident ID</span>: <span id="incident">—</span></p>
+<p class="speakable">Incident ID: <span id="incident">—</span></p>
 </div>
 
 <div id="recommendationBox" class="recommendation speakable">
@@ -127,27 +150,56 @@ Security recommendation will appear here.
 
 <script>
 
+/* ===== Digital Rain Background ===== */
+const canvas = document.getElementById("matrix");
+const ctx = canvas.getContext("2d");
+canvas.height = window.innerHeight;
+canvas.width = window.innerWidth;
+
+const letters = "01";
+const fontSize = 14;
+const columns = canvas.width / fontSize;
+const drops = [];
+
+for(let x=0;x<columns;x++){ drops[x]=1; }
+
+function draw(){
+ctx.fillStyle="rgba(0,0,0,0.08)";
+ctx.fillRect(0,0,canvas.width,canvas.height);
+ctx.fillStyle="#00f5d4";
+ctx.font=fontSize+"px monospace";
+for(let i=0;i<drops.length;i++){
+let text=letters.charAt(Math.floor(Math.random()*letters.length));
+ctx.fillText(text,i*fontSize,drops[i]*fontSize);
+if(drops[i]*fontSize>canvas.height && Math.random()>0.975){ drops[i]=0; }
+drops[i]++;
+}
+}
+setInterval(draw,35);
+
+/* ===== Threat Detection ===== */
+
 let currentLang="en";
 let debounceTimer=null;
 
 const suspiciousWords=[
-"تحقق من حسابك","تحقق من كلمة المرور","ادخل بياناتك",
-"رقم البطاقة","رمز التحقق","تم تجميد حسابك",
+"تحقق من حسابك","تحقق من حسابك البنكي","تحقق من كلمة المرور",
+"ادخل بياناتك","ادخل بياناتك البنكية","رقم البطاقة",
+"الرقم السري","رمز التحقق","تحديث الحساب",
+"تم تجميد حسابك","حسابك موقوف","مبروك لقد ربحت",
+"اربح الآن","جائزة مالية","هدية مجانية",
 "verify your account","account suspended",
 "reset your password","claim your prize",
-"free gift card","urgent action required"
+"free gift card","urgent action required",
+"unusual activity detected","confirm your identity",
+"bitcoin investment","double your money"
 ];
 
 const pattern=new RegExp(suspiciousWords.join("|"),"i");
 
-/* اختيار صوت ناعم */
 function getSoftVoice(){
 let voices=window.speechSynthesis.getVoices();
-return voices.find(v =>
-v.name.toLowerCase().includes("female") ||
-v.name.toLowerCase().includes("zira") ||
-v.name.toLowerCase().includes("google")
-) || voices[0];
+return voices.find(v=>v.name.toLowerCase().includes("female")) || voices[0];
 }
 
 function speak(text){
@@ -155,8 +207,9 @@ if(!text) return;
 window.speechSynthesis.cancel();
 let speech=new SpeechSynthesisUtterance(text);
 speech.lang=currentLang==="ar"?"ar-SA":"en-US";
-speech.rate=0.95;
-speech.pitch=1;
+speech.rate=0.85;
+speech.pitch=0.9;
+speech.volume=0.9;
 speech.voice=getSoftVoice();
 window.speechSynthesis.speak(speech);
 }
@@ -166,24 +219,22 @@ return "INC-"+Math.floor(Math.random()*999999);
 }
 
 function analyze(){
-
 let text=document.getElementById("msg").value.trim();
 if(text.length<3) return;
 
-let statusEl=document.getElementById("status");
-let bar=document.getElementById("bar");
+let status=document.getElementById("status");
 let score=document.getElementById("score");
+let bar=document.getElementById("bar");
 let mitre=document.getElementById("mitre");
 let incident=document.getElementById("incident");
-let recBox=document.getElementById("recommendationBox");
+let rec=document.getElementById("recommendationBox");
 
 document.body.classList.remove("alert");
 bar.classList.remove("danger");
-recBox.classList.remove("danger");
+rec.classList.remove("danger");
 
 if(pattern.test(text)){
-
-statusEl.innerText=currentLang==="ar"?"خطر عالي":"HIGH RISK";
+status.innerText=currentLang==="ar"?"خطر عالي":"HIGH RISK";
 score.innerText="100";
 bar.style.width="100%";
 bar.classList.add("danger");
@@ -191,41 +242,32 @@ mitre.innerText="T1566 - Phishing";
 incident.innerText=generateID();
 document.body.classList.add("alert");
 
-recBox.innerText=currentLang==="ar"?
-"⚠️ التوصية الأمنية: لا تضغط أي رابط. قم بحظر المرسل وإبلاغ فريق الأمن السيبراني فوراً." :
-"⚠️ Security Recommendation: Do NOT click any links. Block the sender and report immediately.";
-recBox.classList.add("danger");
+rec.innerText=currentLang==="ar"?
+"⚠️ التوصية: لا تضغط أي رابط. قم بحظر المرسل وإبلاغ فريق الأمن فوراً.":
+"⚠️ Recommendation: Do NOT click any links. Block sender and report immediately.";
+rec.classList.add("danger");
 
-setTimeout(()=>{
-speak(currentLang==="ar"?"تحذير. الرسالة خطيرة جداً":"Warning. High risk message detected.");
-},500);
+setTimeout(()=>speak(status.innerText),500);
 
 }else{
-
-statusEl.innerText=currentLang==="ar"?"آمن":"SAFE";
+status.innerText=currentLang==="ar"?"آمن":"SAFE";
 score.innerText="0";
 bar.style.width="0%";
 mitre.innerText="None";
 incident.innerText=generateID();
 
-recBox.innerText=currentLang==="ar"?
-"✔ التوصية الأمنية: لا يوجد مؤشرات خطيرة. فقط استمر بالمراقبة." :
-"✔ Security Recommendation: No malicious indicators detected. Continue monitoring.";
-recBox.classList.remove("danger");
-
-setTimeout(()=>{
-speak(currentLang==="ar"?"الرسالة آمنة":"Message is safe.");
-},500);
+rec.innerText=currentLang==="ar"?
+"✔ التوصية: لا يوجد تهديد واضح. استمر بالمراقبة فقط.":
+"✔ Recommendation: No clear threat detected. Continue monitoring.";
+setTimeout(()=>speak(status.innerText),500);
 }
 }
 
-/* تحليل بعد التوقف */
 document.getElementById("msg").addEventListener("input",()=>{
 clearTimeout(debounceTimer);
 debounceTimer=setTimeout(analyze,2000);
 });
 
-/* قراءة أي عنصر يمر عليه الماوس */
 document.addEventListener("mouseover",(e)=>{
 let text=e.target.innerText || e.target.placeholder;
 if(e.target.classList.contains("speakable") || e.target.tagName==="BUTTON"){
@@ -233,31 +275,20 @@ speak(text);
 }
 });
 
-document.getElementById("msg").addEventListener("focus",()=>{
-speak(currentLang==="ar"?
-"أنت الآن في مربع إدخال النص. الصق الرسالة للتحليل.":
-"You are now in the text input box. Paste message to analyze.");
-});
-
-/* زر تغيير اللغة */
 function toggleLang(){
-
 if(currentLang==="en"){
 currentLang="ar";
 document.getElementById("subtitle").innerText="منصة مركز العمليات الأمنية";
 document.getElementById("threatTitle").innerText="حالة التهديد";
 document.getElementById("riskLabel").innerText="درجة الخطورة";
-document.getElementById("incidentLabel").innerText="رقم الحادثة";
 document.getElementById("msg").placeholder="الصق الرسالة هنا للتحليل...";
 }else{
 currentLang="en";
 document.getElementById("subtitle").innerText="Advanced Security Operations Platform";
 document.getElementById("threatTitle").innerText="Threat Status";
 document.getElementById("riskLabel").innerText="Risk Score";
-document.getElementById("incidentLabel").innerText="Incident ID";
 document.getElementById("msg").placeholder="Paste suspicious message here...";
 }
-
 speak(currentLang==="ar"?"تم تغيير اللغة":"Language changed");
 }
 
