--- a/index.html
+++ b/index.html
@@ -1,120 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
 <meta charset="UTF-8">
-<title>BlackFalcon SOC™ Ultimate</title>
+<title>BlackFalcon SOC Ultimate</title>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
 body{
 margin:0;
 font-family:'Orbitron',sans-serif;
+background:black;
 color:#00f5d4;
-overflow-x:hidden;
+overflow:hidden;
+transition:1s;
 }
 
 body.alert{
-background:#1a0000;
+background:#140000;
+color:#ff4d6d;
+animation:flash 0.4s 3;
 }
 
-header{
-text-align:center;
-padding:40px 20px;
-position:relative;
-z-index:2;
+@keyframes flash{
+0%{background:#300000;}
+50%{background:#140000;}
+100%{background:#300000;}
 }
 
-.controls{
-text-align:center;
-margin-bottom:20px;
-z-index:2;
-position:relative;
-}
-
-button{
-padding:10px 25px;
-margin:5px;
-border-radius:30px;
-border:1px solid #00f5d4;
-background:rgba(0,0,0,0.6);
-color:#00f5d4;
-font-weight:bold;
-cursor:pointer;
-backdrop-filter:blur(6px);
-}
+header{text-align:center;padding:30px;}
 
 textarea{
 width:85%;
-height:150px;
+height:160px;
 display:block;
-margin:30px auto;
-background:rgba(0,0,0,0.5);
+margin:20px auto;
+background:rgba(0,0,0,0.6);
 border:1px solid #00f5d4;
 border-radius:20px;
 padding:20px;
 color:#00f5d4;
-font-size:15px;
-backdrop-filter:blur(8px);
-z-index:2;
-position:relative;
+font-size:16px;
+}
+
+body.alert textarea{
+border:1px solid #ff0033;
+color:#ff9aa2;
 }
 
 .card{
 width:85%;
 margin:20px auto;
-background:rgba(0,0,0,0.4);
+background:rgba(0,0,0,0.5);
 border-radius:25px;
 padding:25px;
-backdrop-filter:blur(12px);
-box-shadow:0 0 40px #00f5d422;
-z-index:2;
-position:relative;
+text-align:center;
+box-shadow:0 0 30px #00f5d422;
 }
 
-.progress{
-height:8px;
-background:#111;
-border-radius:10px;
-margin-top:15px;
-overflow:hidden;
-}
-
-.bar{
-height:100%;
-width:0%;
+button{
 background:#00f5d4;
-transition:0.5s;
-}
-
-.bar.danger{
-background:#ff0033;
-}
-
-.recommendation{
-width:85%;
-margin:20px auto;
-padding:20px;
-border-radius:20px;
-background:rgba(0,0,0,0.4);
-border:1px solid #00f5d4;
-backdrop-filter:blur(10px);
-box-shadow:0 0 25px #00f5d422;
+border:none;
+padding:10px 20px;
+border-radius:15px;
+cursor:pointer;
 font-weight:bold;
-position:relative;
-z-index:2;
-}
-
-.recommendation.danger{
-border:1px solid #ff0033;
-box-shadow:0 0 30px #ff003344;
-color:#ff9aa2;
+margin-top:10px;
 }
 
 canvas{
 position:fixed;
 top:0;
 left:0;
-z-index:0;
+z-index:-1;
 }
 </style>
 </head>
@@ -124,96 +81,110 @@ z-index:0;
 <canvas id="matrix"></canvas>
 
 <header>
-<h1 class="speakable">🦅 BlackFalcon SOC</h1>
-<p id="subtitle" class="speakable">Advanced Security Operations Platform</p>
+<h1>🦅 BlackFalcon SOC</h1>
+<p id="subtitle">AI Accessibility Threat Detection</p>
+<button onclick="toggleLanguage()" id="langBtn">English</button>
 </header>
 
-<div class="controls">
-<button onclick="toggleLang()" class="speakable">🌍 Language</button>
-<button onclick="window.print()" class="speakable">Export Report</button>
-</div>
-
-<textarea id="msg" class="speakable" placeholder="Paste suspicious message here..."></textarea>
+<textarea id="msg" placeholder="الصق الرسالة هنا للتحليل..."></textarea>
 
 <div class="card">
-<h3 id="threatTitle" class="speakable">Threat Status</h3>
-<p id="status" class="speakable">—</p>
-<p class="speakable"><span id="riskLabel">Risk Score</span>: <span id="score">0</span>%</p>
-<div class="progress"><div class="bar" id="bar"></div></div>
-<p class="speakable">MITRE: <span id="mitre">—</span></p>
-<p class="speakable">Incident ID: <span id="incident">—</span></p>
-</div>
-
-<div id="recommendationBox" class="recommendation speakable">
-Security recommendation will appear here.
+<h3 id="threatTitle">حالة التهديد</h3>
+<p id="status">—</p>
+<p>Risk Level: <span id="risk">0%</span></p>
+<p>Incident ID: <span id="incident">—</span></p>
+<div id="recommendation"></div>
 </div>
 
 <script>
 
-/* ===== Digital Rain Background ===== */
-const canvas = document.getElementById("matrix");
-const ctx = canvas.getContext("2d");
-canvas.height = window.innerHeight;
-canvas.width = window.innerWidth;
-
-const letters = "01";
-const fontSize = 14;
-const columns = canvas.width / fontSize;
-const drops = [];
-
-for(let x=0;x<columns;x++){ drops[x]=1; }
+/* ===== Digital Rain ===== */
+const canvas=document.getElementById("matrix");
+const ctx=canvas.getContext("2d");
+canvas.height=window.innerHeight;
+canvas.width=window.innerWidth;
+const letters="01";
+const fontSize=14;
+const columns=canvas.width/fontSize;
+const drops=[];
+for(let x=0;x<columns;x++){drops[x]=1;}
+let rainColor="#00f5d4";
 
 function draw(){
 ctx.fillStyle="rgba(0,0,0,0.08)";
 ctx.fillRect(0,0,canvas.width,canvas.height);
-ctx.fillStyle="#00f5d4";
+ctx.fillStyle=rainColor;
 ctx.font=fontSize+"px monospace";
 for(let i=0;i<drops.length;i++){
 let text=letters.charAt(Math.floor(Math.random()*letters.length));
 ctx.fillText(text,i*fontSize,drops[i]*fontSize);
-if(drops[i]*fontSize>canvas.height && Math.random()>0.975){ drops[i]=0; }
+if(drops[i]*fontSize>canvas.height && Math.random()>0.975){drops[i]=0;}
 drops[i]++;
 }
 }
-setInterval(draw,35);
+setInterval(draw,40);
 
-/* ===== Threat Detection ===== */
-
-let currentLang="en";
-let debounceTimer=null;
-
+/* ===== Suspicious Words ===== */
 const suspiciousWords=[
 "تحقق من حسابك","تحقق من حسابك البنكي","تحقق من كلمة المرور",
-"ادخل بياناتك","ادخل بياناتك البنكية","رقم البطاقة",
-"الرقم السري","رمز التحقق","تحديث الحساب",
-"تم تجميد حسابك","حسابك موقوف","مبروك لقد ربحت",
-"اربح الآن","جائزة مالية","هدية مجانية",
+"ادخل بياناتك","رقم البطاقة","الرقم السري",
+"مبروك لقد ربحت","جائزة مالية","رمز التحقق",
 "verify your account","account suspended",
-"reset your password","claim your prize",
-"free gift card","urgent action required",
-"unusual activity detected","confirm your identity",
-"bitcoin investment","double your money"
+"claim your prize","urgent action required",
+"confirm your identity","bitcoin investment",
+"reset your password","free gift card",
+"bank alert","click here immediately"
 ];
 
 const pattern=new RegExp(suspiciousWords.join("|"),"i");
 
-function getSoftVoice(){
-let voices=window.speechSynthesis.getVoices();
-return voices.find(v=>v.name.toLowerCase().includes("female")) || voices[0];
-}
+/* ===== Voice System ===== */
+let spokenElements=new Set();
+let debounceTimer=null;
+let spokenResult=false;
+let currentLang="ar";
 
 function speak(text){
-if(!text) return;
 window.speechSynthesis.cancel();
 let speech=new SpeechSynthesisUtterance(text);
 speech.lang=currentLang==="ar"?"ar-SA":"en-US";
-speech.rate=0.85;
+speech.rate=0.8;
 speech.pitch=0.9;
 speech.volume=0.9;
-speech.voice=getSoftVoice();
 window.speechSynthesis.speak(speech);
 }
 
+document.addEventListener("mouseover",(e)=>{
+let text=e.target.innerText || e.target.placeholder;
+if(text && !spokenElements.has(e.target)){
+spokenElements.add(e.target);
+speak(text);
+}
+});
+document.addEventListener("mouseout",(e)=>{
+spokenElements.delete(e.target);
+});
+
+/* ===== Language Toggle ===== */
+function toggleLanguage(){
+if(currentLang==="ar"){
+currentLang="en";
+document.documentElement.lang="en";
+document.getElementById("langBtn").innerText="عربي";
+document.getElementById("subtitle").innerText="AI Accessibility Threat Detection";
+document.getElementById("threatTitle").innerText="Threat Status";
+document.getElementById("msg").placeholder="Paste the message here for analysis...";
+}else{
+currentLang="ar";
+document.documentElement.lang="ar";
+document.getElementById("langBtn").innerText="English";
+document.getElementById("subtitle").innerText="منصة كشف التهديدات لذوي الإعاقة البصرية";
+document.getElementById("threatTitle").innerText="حالة التهديد";
+document.getElementById("msg").placeholder="الصق الرسالة هنا للتحليل...";
+}
+}
+
+/* ===== Analysis ===== */
 function generateID(){
 return "INC-"+Math.floor(Math.random()*999999);
 }
@@ -223,74 +194,40 @@ let text=document.getElementById("msg").value.trim();
 if(text.length<3) return;
 
 let status=document.getElementById("status");
-let score=document.getElementById("score");
-let bar=document.getElementById("bar");
-let mitre=document.getElementById("mitre");
-let incident=document.getElementById("incident");
-let rec=document.getElementById("recommendationBox");
+let risk=document.getElementById("risk");
+let rec=document.getElementById("recommendation");
 
+document.getElementById("incident").innerText=generateID();
 document.body.classList.remove("alert");
-bar.classList.remove("danger");
-rec.classList.remove("danger");
+rainColor="#00f5d4";
 
-if(pattern.test(text)){
-status.innerText=currentLang==="ar"?"خطر عالي":"HIGH RISK";
-score.innerText="100";
-bar.style.width="100%";
-bar.classList.add("danger");
-mitre.innerText="T1566 - Phishing";
-incident.innerText=generateID();
+let dangerScore=0;
+if(pattern.test(text)){ dangerScore=90; }
+
+risk.innerText=dangerScore+"%";
+
+if(dangerScore>0){
+status.innerText=currentLang==="ar"?"⚠ رسالة مشبوهة":"⚠ Suspicious Message";
+rec.innerHTML=currentLang==="ar"?
+"<b>التوصية الأمنية:</b><br>لا تضغط على أي روابط، لا تدخل بياناتك البنكية، تواصل مع الجهة الرسمية مباشرة.":
+"<b>Security Recommendation:</b><br>Do not click links. Do not share banking info. Contact official support.";
 document.body.classList.add("alert");
-
-rec.innerText=currentLang==="ar"?
-"⚠️ التوصية: لا تضغط أي رابط. قم بحظر المرسل وإبلاغ فريق الأمن فوراً.":
-"⚠️ Recommendation: Do NOT click any links. Block sender and report immediately.";
-rec.classList.add("danger");
-
-setTimeout(()=>speak(status.innerText),500);
-
+rainColor="#ff0033";
+if(!spokenResult){setTimeout(()=>speak(currentLang==="ar"?"تنبيه. رسالة مشبوهة":"Warning. Suspicious message"),500);spokenResult=true;}
 }else{
-status.innerText=currentLang==="ar"?"آمن":"SAFE";
-score.innerText="0";
-bar.style.width="0%";
-mitre.innerText="None";
-incident.innerText=generateID();
-
-rec.innerText=currentLang==="ar"?
-"✔ التوصية: لا يوجد تهديد واضح. استمر بالمراقبة فقط.":
-"✔ Recommendation: No clear threat detected. Continue monitoring.";
-setTimeout(()=>speak(status.innerText),500);
+status.innerText=currentLang==="ar"?"✔ رسالة آمنة":"✔ Message is Safe";
+rec.innerHTML=currentLang==="ar"?
+"<b>التوصية الأمنية:</b><br>لا توجد مؤشرات خطيرة، لكن كن حذر دائمًا.":
+"<b>Security Recommendation:</b><br>No major threat detected, stay cautious.";
+if(!spokenResult){setTimeout(()=>speak(currentLang==="ar"?"رسالة آمنة":"Message is safe"),500);spokenResult=true;}
 }
 }
 
 document.getElementById("msg").addEventListener("input",()=>{
 clearTimeout(debounceTimer);
-debounceTimer=setTimeout(analyze,2000);
+spokenResult=false;
+debounceTimer=setTimeout(analyze,3500);
 });
-
-document.addEventListener("mouseover",(e)=>{
-let text=e.target.innerText || e.target.placeholder;
-if(e.target.classList.contains("speakable") || e.target.tagName==="BUTTON"){
-speak(text);
-}
-});
-
-function toggleLang(){
-if(currentLang==="en"){
-currentLang="ar";
-document.getElementById("subtitle").innerText="منصة مركز العمليات الأمنية";
-document.getElementById("threatTitle").innerText="حالة التهديد";
-document.getElementById("riskLabel").innerText="درجة الخطورة";
-document.getElementById("msg").placeholder="الصق الرسالة هنا للتحليل...";
-}else{
-currentLang="en";
-document.getElementById("subtitle").innerText="Advanced Security Operations Platform";
-document.getElementById("threatTitle").innerText="Threat Status";
-document.getElementById("riskLabel").innerText="Risk Score";
-document.getElementById("msg").placeholder="Paste suspicious message here...";
-}
-speak(currentLang==="ar"?"تم تغيير اللغة":"Language changed");
-}
 
 </script>
 
